WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304048
On caption menu item doesn't enable text tracks
https://bugs.webkit.org/show_bug.cgi?id=304048
Summary
On caption menu item doesn't enable text tracks
Jer Noble
Reported
2025-12-11 22:52:08 PST
On caption menu item doesn't enable text tracks
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2025-12-11 22:52:09 PST
<
rdar://problem/166158394
>
Jer Noble
Comment 2
2025-12-11 22:55:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55295
EWS
Comment 3
2025-12-15 09:40:16 PST
Committed
304462@main
(443099fc5edf): <
https://commits.webkit.org/304462@main
> Reviewed commits have been landed. Closing PR #55295 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug