On caption menu item doesn't enable text tracks rdar://166158394 https://bugs.webkit.org/show_bug.cgi?id=304048

Reviewed by Eric Carlson.

Make "On" behave similarly to "Auto", which is to enable the highest
scoring text track available. Additionally, mark languages in the subtitle
menu as checked when they will be enabled by the "On" menu item.

Drive-by fix: Pass track and element parameters into CaptionUserPreferences
by reference rather than by pointer value.

Test: media/modern-media-controls/tracks-support/on-off-text-track.html

* LayoutTests/media/modern-media-controls/resources/media-controls-utils.js:
* LayoutTests/media/modern-media-controls/tracks-support/on-off-text-track-expected.txt: Added.
* LayoutTests/media/modern-media-controls/tracks-support/on-off-text-track.html: Added.
* Source/WebCore/Modules/mediacontrols/MediaControlsHost.cpp:
(WebCore::MediaControlsHost::captionMenuOnItem):
(WebCore::MediaControlsHost::showMediaControlsContextMenu):
* Source/WebCore/Modules/mediacontrols/MediaControlsHost.h:
* Source/WebCore/Modules/mediacontrols/MediaControlsHost.idl:
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::configureTextTrackGroup):
(WebCore::HTMLMediaElement::setSelectedTextTrack):
* Source/WebCore/page/CaptionUserPreferences.cpp:
(WebCore::CaptionUserPreferences::textTrackSelectionScore const):
(WebCore::CaptionUserPreferences::textTrackLanguageSelectionScore const):
* Source/WebCore/page/CaptionUserPreferences.h:
* Source/WebCore/testing/Internals.cpp:
(WebCore::Internals::controlsHostForMediaElement):
* Source/WebCore/testing/Internals.h:
* Source/WebCore/testing/Internals.idl:

Canonical link: https://commits.webkit.org/304462@main