Source/WebCore/Modules/mediacontrols/MediaControlsHost.h
@@ -38,6 +38,7 @@ namespace WebCore {
 
 class AudioTrack;
 class AudioTrackList;
+class ContextMenuItem;
 class DOMPromise;
 class Element;
 class WeakPtrImplWithEventTargetData;
@@ -47,7 +48,10 @@ class MediaControlTextTrackContainerElement;
 class TextTrack;
 class TextTrackList;
 class TextTrackRepresentation;
+class VTTCue;
 class VoidCallback;
+
+struct MediaControlsContextMenuItem;
 
 enum class HTMLMediaElementSourceType : uint8_t;
 
@@ -65,11 +69,11 @@ public:
     ~MediaControlsHost();
 
 #if ENABLE(MEDIA_SESSION)
-    void ref() const final;
-    void deref() const final;
+    WEBCORE_EXPORT void ref() const final;
+    WEBCORE_EXPORT void deref() const final;
 #else
-    void ref() const;
-    void deref() const;
+    WEBCORE_EXPORT void ref() const;
+    WEBCORE_EXPORT void deref() const;
 #endif
 
     static const AtomString& automaticKeyword();
@@ -89,6 +93,7 @@ public:
 
     static TextTrack& captionMenuOffItem();
     static TextTrack& captionMenuAutomaticItem();
+    static TextTrack& captionMenuOnItem();
     AtomString captionDisplayMode() const;
     void setSelectedTextTrack(TextTrack*);
     Element* textTrackContainer();
@@ -126,7 +131,9 @@ public:
 
     Vector<String, 2> shadowRootStyleSheets() const;
     static String base64StringForIconNameAndType(const String& iconName, const String& iconType);
+
 #if ENABLE(MEDIA_CONTROLS_CONTEXT_MENUS)
+    Vector<MediaControlsContextMenuItem> mediaControlsContextMenuItemsForBindings(String&& optionsJSONString);
     bool showMediaControlsContextMenu(HTMLElement&, String&& optionsJSONString, Ref<VoidCallback>&&);
     void showCaptionDisplaySettingsPreview();
     void hideCaptionDisplaySettingsPreview();
@@ -157,6 +164,33 @@ private:
     void metadataChanged(const RefPtr<MediaMetadata>&) final;
 #endif
 
+    enum class PlaybackSpeed;
+    enum class PictureInPictureTag;
+    enum class ShowMediaStatsTag;
+
+#if ENABLE(MEDIA_CONTROLS_CONTEXT_MENUS)
+#if ENABLE(CONTEXT_MENUS) && USE(ACCESSIBILITY_CONTEXT_MENUS)
+    using MenuItem = ContextMenuItem;
+#else
+    using MenuItem = MediaControlsContextMenuItem;
+#endif
+    using MenuItemIdentifier = uint64_t;
+
+    using MenuData = Variant<
+#if ENABLE(VIDEO_PRESENTATION_MODE)
+        PictureInPictureTag,
+#endif
+        RefPtr<AudioTrack>,
+        RefPtr<TextTrack>,
+        RefPtr<VTTCue>,
+        PlaybackSpeed,
+        ShowMediaStatsTag
+    >;
+    using MenuDataMap = HashMap<MenuItemIdentifier, MenuData>;
+
+    std::pair<Vector<MenuItem>, MenuDataMap> mediaControlsContextMenuItems(String&& optionsJSONString);
+#endif
+
     WeakRef<HTMLMediaElement> m_mediaElement;
     RefPtr<MediaControlTextTrackContainerElement> m_textTrackContainer;
     RefPtr<TextTrack> m_previouslySelectedTextTrack;
@@ -171,4 +205,3 @@ private:
 } // namespace WebCore
 
 #endif // ENABLE(VIDEO)
-
